z-index issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,16 +78,13 @@ section > h2 {
   position: fixed;
   bottom: 1.5rem;
   right: 1.5rem;
-  z-index: 20000;
+  z-index: 10;
 }
 @media only screen and (max-width: 600px) {
-  body {
-    /* font-size: 24px; */
-  }
   section {
     /* min-height: auto;
     height: auto; */
-    padding: 3rem 2rem;
+    padding: 3rem 1rem;
   }
   .theme-toggle-button {
     display: none;
